[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Graphics/UI/funBarBack.png" type="Texture" id=1]
[ext_resource path="res://Assets/Themes/NunitoBold80.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Graphics/UI/funBarInner.png" type="Texture" id=3]
[ext_resource path="res://Assets/Graphics/UI/educationBarOuter.png" type="Texture" id=4]
[ext_resource path="res://Assets/Graphics/UI/levelBarBack.png" type="Texture" id=5]
[ext_resource path="res://Assets/Graphics/UI/educationBarBack.png" type="Texture" id=6]
[ext_resource path="res://Assets/Graphics/UI/foodBarBack.png" type="Texture" id=7]
[ext_resource path="res://Assets/Graphics/UI/educationBarInner.png" type="Texture" id=8]
[ext_resource path="res://Assets/Graphics/UI/foodBarInner.png" type="Texture" id=9]
[ext_resource path="res://Assets/Graphics/UI/levelBarInner.png" type="Texture" id=10]
[ext_resource path="res://Assets/Graphics/UI/levelNumberBack.png" type="Texture" id=11]
[ext_resource path="res://Assets/Graphics/UI/funBarOuter.png" type="Texture" id=12]
[ext_resource path="res://Assets/Graphics/UI/levelBarOuter.png" type="Texture" id=13]
[ext_resource path="res://Assets/Graphics/UI/foodBarOuter.png" type="Texture" id=14]
[ext_resource path="res://GameScene/Objects/DiceRollScreen.tscn" type="PackedScene" id=15]
[ext_resource path="res://GameScene/Objects/Dice.tscn" type="PackedScene" id=16]
[ext_resource path="res://GameScene/GUI/GameSceneGUI.gd" type="Script" id=17]
[ext_resource path="res://Assets/Graphics/UI/soundOn.png" type="Texture" id=18]
[ext_resource path="res://GameScene/GUI/MuteButton.gd" type="Script" id=19]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 17 )

[node name="MoneyBar" type="TextureProgress" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -612.0
margin_top = 47.0
margin_right = 612.0
margin_bottom = 139.0
rect_pivot_offset = Vector2( 612, 46 )
texture_under = ExtResource( 5 )
texture_over = ExtResource( 13 )
texture_progress = ExtResource( 10 )

[node name="LevelCountBack" type="TextureRect" parent="MoneyBar"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -62.0
margin_right = 125.0
margin_bottom = 62.0
rect_pivot_offset = Vector2( 62, 62 )
rect_clip_content = true
texture = ExtResource( 11 )

[node name="LevelCount" type="Label" parent="MoneyBar/LevelCountBack"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.984314, 0.964706, 0.835294, 1 )
text = "42"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -724.5
margin_top = -341.0
margin_right = 724.5
margin_bottom = -292.0
rect_pivot_offset = Vector2( 725, 25 )
custom_constants/separation = 80

[node name="FoodBar" type="TextureProgress" parent="HBoxContainer"]
margin_right = 429.0
margin_bottom = 49.0
theme = ExtResource( 2 )
texture_under = ExtResource( 7 )
texture_over = ExtResource( 14 )
texture_progress = ExtResource( 9 )

[node name="EducationBar" type="TextureProgress" parent="HBoxContainer"]
margin_left = 509.0
margin_right = 940.0
margin_bottom = 49.0
theme = ExtResource( 2 )
texture_under = ExtResource( 6 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 8 )

[node name="FunBar" type="TextureProgress" parent="HBoxContainer"]
margin_left = 1020.0
margin_right = 1449.0
margin_bottom = 49.0
theme = ExtResource( 2 )
texture_under = ExtResource( 1 )
texture_over = ExtResource( 12 )
texture_progress = ExtResource( 3 )

[node name="DiceRollScreen" parent="." instance=ExtResource( 15 )]
position = Vector2( 947, 960 )
die = ExtResource( 16 )

[node name="MuteButton" type="Sprite" parent="."]
position = Vector2( 1839, 61 )
texture = ExtResource( 18 )
script = ExtResource( 19 )
